* New: Added a custom meta field to the Google Map single post screen that outputs the post's shortcode so it's more easily accessible. Before you could only access the shortcode via the Google Maps post listing page. * Updated readme.txt file with more information about the plugin, fixed several formatting errors and typos. * Fixed: Activation error "PHP Strict Standards:  call_user_func_array() expects parameter 1 to be a valid callback, non-static method Google_Maps_Builder::activate() should not be called statically in ..." - Thanks Jon Brown!
git-svn-id: https://plugins.svn.wordpress.org/google-maps-builder/trunk@910876 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/admin/assets/css/admin.css
+++ b/admin/assets/css/admin.css
@@ -19,6 +19,12 @@
 	transition: 0.2s all linear;
 }
 
+.box-sizing {
+	box-sizing: border-box;
+	-moz-box-sizing: border-box;
+	-webkit-box-sizing: border-box;
+}
+
 #gmb_markers_group_repeat {
 	/*display: none;*/
 }
@@ -61,6 +67,22 @@
 	padding-right: 16px;
 }
 
+/*Shortcode Input */
+
+.shortcode-wrap {
+	margin: 1px 14px 12px 11px;
+}
+
+.shortcode-wrap label {
+	margin: 0 0 3px;
+	display: block;
+	cursor: default;
+}
+
+.shortcode-input {
+	margin: 0;
+	width: 100%;
+}
 
 /*------------------------------------------
  CMB Interface
